kubernetes/natter-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: natter-database-service
  namespace: natter-api
spec:
  selector:
    app: natter-database
  ports:
    - protocol: TCP
      port: 9092
