kubernetes/natter-link-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: natter-link-preview-service
  namespace: natter-api
spec:
  selector:
    app: link-preview
  ports:
    - protocol: TCP
      port: 4567
